# weather-FastAPI

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/: weather_api.py
resources/: config.properties.example
service/: url_manager.py
service/api/: weather_api.py
service/configuration/: config_parser.py
service/request/: request_service.py
weather/: __main__.py  config.py
weather/api/: owm_client.py  schemas.py  weather_api.py
weather/configuration/: properties_manager.py
weather/request/: request_service.py
