[tool.poetry]
name = "fastapi-weather"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
pytest = "^8.1.1"
ruff = "^0.3.4"
mypy = "^1.9.0"
httpx = "^0.27.0"
pydantic = "^2.6.4"

[tool.ruff]
line-length = 120


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
